--- a/web/src/sass/custom.scss
+++ b/web/src/sass/custom.scss
@@ -356,6 +356,10 @@ article {
 .brand-popup {
 	background-color: #fff;
 
+	.col-md-6 {
+		background-color: #fff;
+	}
+
 	.gatsby-image-wrapper {
 		height: 300px;
 
