--- a/web/src/sass/custom.scss
+++ b/web/src/sass/custom.scss
@@ -680,3 +680,24 @@ iframe {
 		inset: 40px !important;
 	}
 }
+
+.page-vacancies {
+    p {
+      margin: 1em;
+    }
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      text-align: center;
+      font-family: 'Montserrat';
+      color: #676260;
+    }
+
+    a {
+      color: #676260;
+    }
+  }
